--- a/bliss_ecologital/pubspec.yaml
+++ b/bliss_ecologital/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-    # - images/a_dot_burr.jpeg
-    # - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/category_guitar_icon/
+    - assets/images/category_piano_icon/
+    - assets/images/category_drums_icon/
+    - assets/images/user_image/
